--- a/index.html
+++ b/index.html
@@ -12,10 +12,25 @@
 <body>
   <div id="draw-animation">
   </div>
-  <button class="button" type="button" id="Sphere">
-    Add sphere
-  </button>
-
+  <div style="display: inline-block;">
+    <button class="button" type="button" id="Sphere">
+      Add sphere
+    </button>
+    <button class="button" type="button" id="clear">
+      Delete spheres
+    </button>
+    <button class="button" type="button" id="start">
+      Start
+    </button>
+    <button class="button" type="button" id="stop">
+      Stop
+    </button>
+    <div class="slider">
+      <p>Spawn speed</p>
+      <input id="range" type="range" min="1" max="30" value="3" oninput="rangeValue.innerText = this.value">
+      <p id="rangeValue">3</p>
+    </div>
+  </div>
   <script type="text/javascript" src="anim.js"></script>
 </body>
 
