--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
   <div id="draw-animation">
   </div>
-  <div style="margin: 10px;">
-    <div id="buttons">
+  <div class="interface" style="margin: 10px;">
       <button class="button" type="button" id="Sphere">
         Add sphere
       </button>
@@ -26,26 +25,25 @@
       <button class="button" type="button" id="stop">
         Stop
       </button>
-    </div>
     <div class="slider">
       <p>Spawn speed</p>
       <input id="range" type="range" min="1" max="30" value="3" oninput="rangeValue.innerText = this.value">
-      <p id="rangeValue">3</p>
+      <p class="right" id="rangeValue">3</p>
     </div>
     <div class="slider">
       <p>Distance</p>
       <input id="range2" type="range" min="1" max="100" value="10" oninput="rangeValue2.innerText = this.value">
-      <p id="rangeValue2">10</p>
+      <p class="right" id="rangeValue2">10</p>
     </div>
     <div class="slider">
       <p>D/lambda</p>
       <input id="range3" type="range" min="1" max="10" value="5" oninput="rangeValue3.innerText = this.value">
-      <p id="rangeValue3">5</p>
+      <p class="right" id="rangeValue3">5</p>
     </div>
     <div class="slider">
       <p>L</p>
       <input id="range4" type="range" min="1" max="50" value="5" oninput="rangeValue4.innerText = this.value">
-      <p id="rangeValue4">5</p>
+      <p class="right" id="rangeValue4">5</p>
     </div>
   </div>
   <script type="text/javascript" src="anim.js"></script>
