--- a/index.html
+++ b/index.html
@@ -6,25 +6,32 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/two.js/0.8.10/two.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/two.js/0.8.10/two.module.js"></script>
   <link rel="stylesheet" href="css.css" />
+  <link href="light-theme.css" rel="stylesheet" id="theme-link">
   <script type="text/javascript" src="generator.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <button class="theme" type="button" id="Theme">
+    ◐
+  </button>
   <div id="draw-animation">
   </div>
   <div class="interface" style="margin: 10px;">
-      <button class="button" type="button" id="Sphere">
-        Add sphere
-      </button>
-      <button class="button" type="button" id="clear">
-        Delete spheres
-      </button>
-      <button class="button" type="button" id="start">
-        Start
-      </button>
-      <button class="button" type="button" id="stop">
-        Stop
-      </button>
+    <button class="button" type="button" id="Sphere">
+      Add sphere
+    </button>
+    <button class="button" type="button" id="clear">
+      Delete spheres
+    </button>
+    <button class="button" type="button" id="start">
+      Start
+    </button>
+    <button class="button" type="button" id="stop">
+      Stop
+    </button>
     <div class="slider">
       <p>Spawn speed</p>
       <input id="range" type="range" min="1" max="30" value="3" oninput="rangeValue.innerText = this.value">
