--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/two.js/0.8.10/two.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/two.js/0.8.10/two.module.js"></script>
   <link rel="stylesheet" href="css.css" />
+  <link rel="stylesheet" href="css_graph.css" />
   <script type="text/javascript" src="generator.js"></script>
+  <script type="text/javascript" src="graph.js"></script>
 
 </head>
 
@@ -32,31 +34,39 @@
       <p id="rangeValue">3</p>
     </div>
   </div>
-  </div>
   <div style="display: inline-block;">
-    </button>
     <div class="slider">
       <p>Distance</p>
       <input id="range2" type="range" min="1" max="100" value="10" oninput="rangeValue2.innerText = this.value">
       <p id="rangeValue2">10</p>
     </div>
-    </button>
     <div class="slider">
       <p>D/lambda</p>
       <input id="range3" type="range" min="1" max="10" value="5" oninput="rangeValue3.innerText = this.value">
       <p id="rangeValue3">5</p>
     </div>
   </div>
-</div>
-<div style="display: inline-block;">
-  </button>
-  <div class="slider">
-    <p>L</p>
-    <input id="range4" type="range" min="1" max="50" value="5" oninput="rangeValue4.innerText = this.value">
-    <p id="rangeValue4">5</p>
+  <div style="display: inline-block;">
+    <button class="button" type="button" id="Graph">
+      Add graph
+    </button>
+    <div class="slider">
+      <p>L</p>
+      <input id="range4" type="range" min="1" max="50" value="5" oninput="rangeValue4.innerText = this.value">
+      <p id="rangeValue4">5</p>
+    </div>
   </div>
-</div>
   <script type="text/javascript" src="anim.js"></script>
+</body>
+
+<body>
+  <div style="width: 800px;">
+  <canvas id="graph">
+  </canvas>
+  </div>
+  
+  <script type="module" src="graph.js">
+  </script>
 </body>
 
 </html>
