Failed cas module

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css.css" />
   <link href="light-theme.css" rel="stylesheet" id="theme-link">
   <script type="text/javascript" src="generator.js"></script>
+  <script type="text/javascript" src="cas_and_log.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
