--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
     </button>
     <div class="slider">
       <p>Spawn speed</p>
-      <input id="speed" type="range" min="10" max="300" value="30">
-      <!-- <p class="right" id="rangeSpeed">3</p> -->
-      <input value="3" type="number" id="rangeSpeedt" step="1">
+      <input id="speed" type="range" min="10" max="300" value="30" step="1">
+      <input id="rangeSpeed" type="number" min="1" max="30" value="3" step="1">
     </div>
     <div class="slider">
       <p>Distance</p>
-      <input id="dist" type="range" min="1" max="50" value="10">
-      <p class="right" id="rangeDist">10</p>
+      <input id="dist" type="range" min="10" max="500" value="100">
+      <input id="rangeDist" type="number" min="1" max="50" value="10" step="1">
+      <!-- <p class="right" id="rangeDist">10</p> -->
     </div>
     <div class="slider">
       <p>D/lambda</p>
