--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       Добавить сферу
     </button>
     <button class="button" type="button" id="clear">
-      Очистить всё
+      Сброс
     </button>
     <button class="button" type="button" id="start">
       Старт
