--- a/indexen.html
+++ b/indexen.html
@@ -38,7 +38,7 @@
       Add sphere
     </button>
     <button class="button" type="button" id="clear">
-      Clear all
+      Reset
     </button>
     <button class="button" type="button" id="start">
       Start
